# galaxy-zoo

./: .gitignore  README.md  asciiart.py  config_default.yaml  data.ipynb  data_preparation.py  evaluate.py  pyproject.toml  train.py
galaxy_classification/: __init__.py  data.py
galaxy_classification/networks/: __init__.py  cnn.py  mlp.py
