[project]
name = "galaxy_zoo"
version = "0.1.0"
description = "Galaxy Zoo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "dacite>=1.9.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "simple-parsing>=0.1.7",
    "tables>=3.10.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "colorful",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["galaxy_zoo"]
